Add comprehensive test coverage for SetupArea and clean up field annotations